--- a/app/src/main/res/layout/new_habit_creation.xml
+++ b/app/src/main/res/layout/new_habit_creation.xml
@@ -14,35 +14,29 @@
         android:layout_alignParentStart="true"
         android:text="HabitName"
         android:textAlignment="center"
-        android:textSize="30dp"
-        android:textIsSelectable="true" />
+        android:textSize="30dp"/>
 
-    <EditText
+    <DatePicker
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/HabitDate"
+        android:layout_height="100dp"
+        android:id="@+id/habitDate"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
+        android:calendarViewShown="false"
         android:layout_below="@+id/HabitName"
-        android:layout_alignEnd="@+id/HabitName"
-        android:layout_alignStart="@+id/HabitName"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:text="HabitDate"
-        android:textIsSelectable="true" />
+        android:layout_centerHorizontal="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/HabitDate"
-        android:layout_alignStart="@+id/HabitDate"
-        android:layout_alignEnd="@+id/HabitDate"
-        android:text="Repeat" />
+        android:id="@+id/repeat_text"
+        android:text="Repeat"
+        android:textSize="15dp"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentBottom="false"
+        android:layout_alignStart="@id/HabitName"
+        android:layout_below="@+id/habitDate"
+        android:layout_marginTop="10dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -51,7 +45,7 @@
         android:id="@+id/SundayCheck"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="20dp"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/repeat_text"
         android:layout_alignStart="@+id/editText"
         android:textSize="25dp"
         android:layout_alignEnd="@+id/editText"
@@ -137,7 +131,8 @@
         android:id="@+id/cancel_button_new_habit"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/HabitName"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:onClick="mainActivity"/>
 
     <Button
         android:layout_width="195dp"
@@ -146,7 +141,8 @@
         android:id="@+id/save_button_new_habit"
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@id/HabitName"
-        android:textSize="20dp" />
+        android:textSize="20dp"
+        android:onClick="mainActivity"/>
 
 
 </RelativeLayout>
