--- a/app/src/main/res/layout/new_habit_creation.xml
+++ b/app/src/main/res/layout/new_habit_creation.xml
@@ -12,19 +12,27 @@
         android:layout_marginLeft="10dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:text="HabitName"
+        android:hint="Habit Name"
         android:textAlignment="center"
         android:textSize="30dp"/>
 
-    <DatePicker
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:id="@+id/habitDate"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:calendarViewShown="false"
+        android:layout_height="wrap_content"
+        android:text="Date:"
+        android:id="@+id/date_text"
+        android:layout_alignStart="@+id/repeat_text"
         android:layout_below="@+id/HabitName"
-        android:layout_centerHorizontal="true" />
+        android:textSize="20dp"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/current_date"
+        android:hint="  yyyy-mm-dd"
+        android:layout_below="@+id/HabitName"
+        android:layout_toEndOf="@+id/date_text" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,15 +43,15 @@
         android:layout_alignParentTop="false"
         android:layout_alignParentBottom="false"
         android:layout_alignStart="@id/HabitName"
-        android:layout_below="@+id/habitDate"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/date_text" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sunday"
         android:id="@+id/SundayCheck"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
         android:layout_below="@+id/repeat_text"
         android:layout_alignStart="@+id/editText"
@@ -143,6 +151,7 @@
         android:layout_alignEnd="@id/HabitName"
         android:textSize="20dp"
         android:onClick="mainActivity"/>
+
 
 
 </RelativeLayout>
