--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="1200px"
-        android:id="@+id/listView"
+        android:id="@+id/HabitsView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         tools:listitem="@android:layout/simple_list_item_checked"
@@ -33,8 +33,8 @@
         android:layout_marginTop="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/listView"
-        android:layout_below="@+id/listView"
+        android:layout_alignEnd="@+id/HabitsView"
+        android:layout_below="@+id/HabitsView"
         android:layout_alignParentEnd="true"
         android:textSize="30dp"
         android:clickable="true"
